# Physica

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
apps/webxr-demos/: README.md  index.html  package.json
apps/webxr-demos/src/: main.js
apps/webxr-demos/src/physics/: PhysicsWorld.js  ThermalGrid.js
apps/webxr-demos/src/render/: makeHud.js  makeScene.js
apps/webxr-demos/src/util/: math.js  time.js
apps/webxr-demos/styles/: app.css
docs/: tutorial.md
examples/: autonomous_physicist_demo.py  conservation_validation_demo.py  crewai_integration_demo.py  multi_provider_demo.py  neuro_physical_demo.py  phase_ii_electromagnetism_demo.py  phase_ii_hamiltonian_lagrangian_demo.py  phase_ii_thermodynamics_demo.py  phase_iiia_autonomous_control_demo.py  phase_iiib_semiconductor_twin_demo.py  phase_iiic_surrogate_models_demo.py  pinn_training_demo.py
src/physica/: __init__.py  agent.py  agentic.py  autonomous_control.py  engine.py  neuro_physical_loop.py  py.typed  semiconductor_twin.py  surrogate_models.py
src/physica/cognitive/: __init__.py  catalog.py  intent.py  llm.py  settings.py
src/physica/conservation/: __init__.py  laws.py
src/physica/domains/: __init__.py  electromagnetism.py  hamiltonian.py  lagrangian.py  thermodynamics.py
src/physica/pinn/: __init__.py  base.py  electromagnetism.py  mechanics.py  thermodynamics.py  trainer.py
tests/: test_physics.py
