[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physica"
version = "0.2.0"
description = "Physics-World-Model: portable ballistic simulator + agent"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ruslan Magana Vsevolodovna", email = "ruslan@example.com" }
]
license = { file = "LICENSE" }
keywords = ["physics", "simulation", "ode", "agent", "world-model"]

dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
]

[project.optional-dependencies]
# Optional accelerated/differentiable backend
jax = [
  "jax>=0.4.13",
  "jaxlib>=0.4.13",
  "diffrax>=0.4.1",
  "equinox>=0.10.6",
]
# Dev tools
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
