[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physica"
version = "1.0.0"
description = "Physics-World-Model: Neuro-Physical AI with PINNs, LLM Integration, and Differentiable Physics"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ruslan Magana Vsevolodovna", email = "ruslan@example.com" }
]
license = { file = "LICENSE" }
keywords = ["physics", "simulation", "ode", "pinn", "agent", "world-model", "agentic-ai", "llm", "differentiable-physics"]

dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "torch>=2.0.0",
  "matplotlib>=3.7.0",
  "pydantic>=2.0.0",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Optional accelerated/differentiable backend
jax = [
  "jax>=0.4.13",
  "jaxlib>=0.4.13",
  "diffrax>=0.4.1",
  "equinox>=0.10.6",
]
# LLM integration for cognitive layer
llm = [
  "anthropic>=0.18.0",
  "openai>=1.12.0",
  "tiktoken>=0.5.2",
]
# Advanced visualization
viz = [
  "plotly>=5.18.0",
  "ipywidgets>=8.1.0",
]
# All features
all = [
  "jax>=0.4.13",
  "jaxlib>=0.4.13",
  "diffrax>=0.4.1",
  "equinox>=0.10.6",
  "anthropic>=0.18.0",
  "openai>=1.12.0",
  "tiktoken>=0.5.2",
  "plotly>=5.18.0",
  "ipywidgets>=8.1.0",
]
# Dev tools
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
